--- a/beats.css
+++ b/beats.css
@@ -89,7 +89,12 @@ h2 {
     font-weight: bold;
     margin-bottom: 10px;
 }
-
+.album-image {
+    width: 100%;
+    height: auto;
+    max-width: 200px; /* Set a max-width for the album image */
+    margin-bottom: 10px;
+}
 audio {
     width: 100%;
     outline: none;
